# carbide

./: Cargo.toml  shell.nix
src/: cli.rs  generations.rs  lua.rs  main.rs
src/difference/: mod.rs  models.rs  tests.rs
src/generations/: mod.rs  models.rs  tests.rs
src/lua/: mod.rs  models.rs  tests.rs
