[package]
name = "carbide"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_fs = "1.1.2"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "cargo"] }
mlua = { version = "0.10.0", features = ["lua54", "vendored"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
